# sentinel-monitor

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: .env.example  README.md  pyproject.toml
agent/src/sentinel_agent/: config.py  exceptions.py  main.py
agent/src/sentinel_agent/client/: sentinel_client.py
agent/src/sentinel_agent/collectors/: cpu.py  disk.py  memory.py
agent/src/sentinel_agent/models/: __init__.py  computer.py  metric_sample.py
agent/src/sentinel_agent/services/: collection_service.py  registration_service.py
agent/src/sentinel_agent/utils/: retry.py
agent/tests/: conftest.py  test_client.py  test_collectors.py  test_main.py  test_registration_service.py  test_retry.py
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2c5998637761_add_composite_index_on_metrics_computer_.py  9d35e8085691_create_computers_and_metrics_tables.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  exception_handlers.py  exceptions.py  logging_config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  computer.py  metric.py
backend/app/repositories/: __init__.py  computer_repository.py  metric_repository.py
backend/app/routers/: computers.py  health.py  metrics.py
backend/app/schemas/: __init__.py  computer.py  metric.py
backend/app/services/: __init__.py  computer_service.py  metric_service.py
backend/tests/: conftest.py  test_computer_service.py  test_computers.py  test_metrics.py
docs/: api.md  architecture.md  decisions.md  roadmap.md  setup.md
docs/diagrams/: agent-flow.mmd  architecture.mmd  backend-flow.mmd  frontend-flow.mmd  system-flow.md
docs/screenshots/: README.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  router.tsx  setupTests.ts
frontend/src/api/: client.ts  computers.ts  metrics.ts  types.ts
frontend/src/hooks/: useComputers.ts  useMetricHistory.ts  usePollingInterval.test.ts  usePollingInterval.ts
frontend/src/lib/: formatDate.test.ts  formatDate.ts  formatRelativeTime.test.ts  formatRelativeTime.ts  pollingIntervals.ts
scripts/: run-all.ps1  run-all.sh  setup.ps1  setup.sh
(+18 files in other folders)
