[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Agente coletor de métricas de infraestrutura do Sentinel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sentinel-agent = "sentinel_agent.main:main"

[dependency-groups]
dev = ["ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_agent"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
