[project]
name = "sentinel-backend"
version = "0.1.0"
description = "API do Sentinel: recebe métricas do agent, persiste e disponibiliza para o frontend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = ["ruff>=0.6", "mypy>=1.13", "pytest>=8.3", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
strict = true
files = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
